Update Bugs and Changes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section id="finale">
         <div class="area">
             <h1>
-                Check More About Kakashi
+                Check More <br> About <br> Kakashi
             </h1>
 
             <a href="https://naruto.fandom.com/wiki/Kakashi_Hatake" class="button" target="_blank" >Learn More</a>
